Fix byte order selection for breakpoints: on arm the byte order for code might differ from the generic BFD endianess. Fixes PR toolchain/49445.